# ProteinArea

./: .codecov.yml  .gitattributes  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gh-ci.yaml
ProteinArea/: ProteinArea.py  __init__.py  _version.py
ProteinArea/data/: files.py
ProteinArea/tests/: conftest.py  test_ProteinArea.py
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  make.bat  requirements.yaml
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
