[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ProteinArea"
description = "A package to calculate time-series protein area profile of MD data."
license = {file = "LICENSE" }
authors = [
    {name = "Chenou Zhang", email = "czhan178@asu.edu"},
]
maintainers = [
    {name = "Chenou Zhang", email = "czhan178@asu.edu"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "MDAnalysis>=2.0.0",
]
keywords = [
    "molecular simulations",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

# [project.urls]
# source = "https://github.com/ChenouZhang/ProteinArea"
# documentation = "https://ProteinArea.readthedocs.io"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "ProteinArea/tests",
]
